[package]
name = "nitro-enclave-attestation-document"
version = "0.1.0"
authors = ["dermil01"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = "0.11"
serde = { version = "^1.0", features = ["derive"] }
rustls = { version = "0.20.4", features = [ "dangerous_configuration" ] }
webpki = "0.22.0"
byteorder = "1.3.4"
serde_with = { version = "1.9.4", default_features = false }
aws-nitro-enclaves-cose = {version = "0.5.2", default_features = false }
ring = "0.16.20"
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
serde_json = "^1.0"
hex = "0.4.3"

# Add this section to enable the "js" feature for getrandom when targeting wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
